fixed problem with create event sometimes not showing up

--- a/src/styles/Components/Calendar.scss
+++ b/src/styles/Components/Calendar.scss
@@ -65,9 +65,9 @@
         border: none;
     }
 
-    .fc-timegrid-col-bg:has(.calendar-hightlight) {
+    .fc-timegrid-col-bg:has(.calendar-highlight) {
         .fc-timegrid-bg-harness {
-            display: none;
+            opacity: 0;
         }
     }
 
